# FoldSAE

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  run_ablations.sh
RFDiffSAE/: README.md
RFDiffSAE/config/: base.yaml
RFDiffSAE/config/ablations/: empty.yaml
RFDiffSAE/config/activations/: block4.yaml  empty.yaml
RFDiffSAE/config/saeinterventions/: block4.yaml  empty.yaml
RFDiffSAE/notes/: breaking-down-code.md
RFDiffSAE/rfdiffusion/: HookedRoseTTAFoldModel.py  RoseTTAFoldModel.py  Track_module.py  activations.py
RFDiffSAE/rfdiffusion/inference/: model_runners.py
RFDiffSAE/rfdiffusion/sae/: blockoutputtransformation.py  config.py  interventionhook.py  universalsae.py
RFDiffSAE/scripts/: diffSAE.code-workspace  generate_config_structures.py  run_inference.py
RFDiffSAE/shell_scripts/: cuda_env.sh  mac_env.sh
config/: base.yaml
config/ablations/: example.yaml
config/activations/: block4.yaml  empty.yaml  example.yaml
config/saeinterventions/: block4.yaml  empty.yaml
docs/: api.rst  contributing.md  index.rst  installation.rst
docs/_static/css/: overwrite.css
docs/api/: models_index.rst  utils_index.rst
docs/tutorials/: benchmark_rna.ipynb  beyond_sequences.ipynb  third_party.ipynb  time_series.ipynb
notebooks/: block_act_subcellular_ds.ipynb  block_act_subcellular_ds.py
notebooks/probes/data/: concat_block_act.json
notebooks/strucutres/: analyze_probes.ipynb  analyze_structures_ds.ipynb  coefs_visualization.ipynb  lamda_x_seed.ipynb  probes_non_pair.ipynb  structures_ds_non_pair.ipynb
notebooks/strucutres/plots/: longest_initial_increasing_length.csv
rfdiffusion/: HookedRoseTTAFoldModel.py  RoseTTAFoldModel.py  Track_module.py  activations.py
rfdiffusion/inference/: model_runners.py
rfdiffusion/sae/: dataloader.py  interventionhook.py  run_training.py  sae.py
scripts/: generate_config.py  merge_activations_datasets.py  plot_ehtnone.py  readme.md  run_inference.py
scripts/ablations/: ablations.sh
scripts/clean/: iterate_over_blocks.sh  preds-for-dir-with-fastas.sh  preds-for-single-fasta.sh
scripts/envs/: clean.sh  env_classifiers_bio_embed.sh  localcolabfold.sh  mpnn.sh  openstructure.sh  rfdiffsae.sh  sequences-diversity.sh
scripts/managment/: move_structures_if_more_than_300.sh  split_flat_dir_of_structures_for_ablated_blocks.sh
scripts/plots/: bio_emb_classifiers.py  enzymatic_classifiers.py  interventions_across_timesteps.py  structure_quality.py  structure_quality_single_file.py  subcellular.py
scripts/protein-struct-pipe/: eval_structures.sh  inverse_folding_for_range_of_blocks.sh
scripts/protein-struct-pipe/bio_emb/: run_classifiers.sh
scripts/protein-struct-pipe/colabfold/: run_colabfold.sh
scripts/protein-struct-pipe/openstructures/: evaluate_structures.py  evaluate_structures.sh
scripts/protein-struct-pipe/protein_mpnn/: inverse_folding_for_range_of_blocks.sh  run_inverse_folding.sh
scripts/rfdiffsae/: ablations.sh  ablations_and_eval.sh  sae_and_eval.sh  sae_intervention_classifiers.sh  seqeunce_of_subcellular_sweeps.sh  sweep_sae_internvetions.sh
scripts/sae/: check_max_num_of_timesteps_for_intervention.sh  collect_activations.sh  sae_latensts_tmux.sh  sae_latents_subcelluar_ds.sh  sweep.yaml  sweep_train_probes.yaml  sweep_train_sae.yaml  sweep_train_sae_less_params.yaml  tmux_wandb_agents.sh  update_sae_latents_dataset.py
scripts/sae_training/: sae_latents_subcelluar_ds.sh  sweep_train_probes.yaml
scripts/sequence-diversity/: sequence-diversity-plot.sh
scripts/structures/: e2e_probes_ds.sh  generations.yaml  get_strcutures_annotatons.py  helixes_vs_seq_length.py  probes_sweep.sh  sae_intervention.py  sweep_generate_structures.sh  train_probes.py
scripts/structures/ablations/: analyze_ablation_blocks.py  eval_pipeline.sh  plot_ablation_blocks.py  tmux_ablations.sh
scripts/structures/create_ds/: e2e_probes_ds.sh  get_strcutures_annotatons.py  merge_datasets.py  normalize_latents.py  probes_ds_from_block_act.sh
scripts/structures/eda/: analyze_secondary_struct_flat_dir.py  plot_freq_from_csv.py  plot_freq_from_ds.py
scripts/structures/helix_vs_seq_len_experiment/: sweep.yaml
scripts/structures/interventions/: analyze_helix_beta_ratios.py  eval_pipeline.sh  (+7 more)
scripts/subcellular_interventions/: ablations.sh  ablations_and_eval.sh  sae_and_eval.sh  sae_intervention_classifiers.sh  sae_latents_subcelluar_ds.sh  subcellular_bar_plot.py
scripts/tools/: merge_datasets.py
seqeunces-diversity/: requirements.txt  sequence_diversity_plot.py
seqme/: .gitignore  LICENSE  README.md
seqme/docs/: citing.rst  conf.py
shell_scripts/: cuda_env.sh  mac_env.sh  run_ablations_-1_14.sh  run_ablations_15_32.sh
src/seqme/: __init__.py
stride/: strides.sh
tests/core/: test_combine.py  test_evaluate.py  test_sort.py  test_top_k.py
tests/metrics/: test_conformity_score.py  test_count.py  test_diversity.py  test_fkea.py  test_fold.py  test_hitrate.py  test_hypervolume.py  test_kid.py  test_length.py  test_precision_recall.py
universal-diffsae/notebooks/: probe_sae_vs_block.ipynb
universaldiffsae/: README.MD
(+91 files in other folders)
